# qa_guru_graduate_work_web_and_api

./: .env  .gitignore  README.md  pyproject.toml
pages/: authorization_page.py  base_page.py  registration_page.py
tests/: conftest.py  test_reqres_api.py  test_web_shop_ui.py
utils/: helper.py
